moved all button styling from doctor.css to theme.css and fixed text alignment in hero section of tab view

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -397,9 +397,7 @@ figcaption {
     margin: 0;
   }
 
-  .dark-btn {
-    width: 20%;
-  }
+  
 
   .how-it-works__services {
     align-items: flex-start;
